--- a/commons-jsonrpc/pom.xml
+++ b/commons-jsonrpc/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>pl.chilldev.commons</groupId>
         <artifactId>commons</artifactId>
-        <version>0.0.4</version>
+        <version>0.1.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
