--- a/commons-db/pom.xml
+++ b/commons-db/pom.xml
@@ -42,6 +42,24 @@
     <!-- project dependencies -->
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>1.0.0.Final</version>
